Cart & Checkout Page

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -59,8 +59,37 @@ ul{
 .container{
     max-width: 1200px;
 }
-
+.nav-tabs{
+    .nav-link{
+        padding: 10px 15px;
+        font-size: 1.2em;
+        font-weight: 500;
+        color: $primary-black;
+        &.active{
+            background-color: rgba($primary-black, 0.03);
+            border-color: rgba($primary-black, 0.05);
+            color: $primary-black;
+        }
+        &:hover{
+            background-color: rgba($primary-black, 0.03);
+            border-color: rgba($primary-black, 0.05);
+            color: $primary-black;
+        }
+    }
+}
 .btn{
+    &.btn-size{
+        background-color: rgba($primary-black, 0.03);
+        border-color: rgba($primary-black, 0.05);
+        padding: 7px 15px;
+        &.active{
+            border-color:  rgba($primary-black, 0.20);;
+        }
+        &:hover{
+            border-color:  rgba($primary-black, 0.20);;
+            color: $primary-black;
+        }
+    }
     &.btn-primary{
         background-color: $primary-color;
         border-color: $primary-color;
@@ -159,6 +188,19 @@ footer{
     .spotlight{
         border-top: 1px solid rgba($primary-white,0.10);
         border-bottom: 1px solid rgba($primary-white,0.10);
+    }
+}
+.product-detail{
+    .mySwiper{
+        .swiper-slide{
+            height: auto !important;
+        }
+    }
+    .price{
+        font-weight: bold;
+        span{
+            color: rgba($primary-black,0.5);
+        }
     }
 }
 @media (min-width:200px) and (max-width:768px){
