--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -203,6 +203,9 @@ footer{
         }
     }
 }
+.login-card{
+    width: 450px;
+}
 @media (min-width:200px) and (max-width:768px){
     .swiper{
         .swiper-wrapper{
